<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/bottom_actionbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abs__action_bar_default_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/actionbar_background" >

        <TextView
            android:id="@+id/save_observation"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/actionbar_btn"
            android:drawableStart="@drawable/ic_action_save"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/save_observation" />

        <TextView
            android:id="@+id/commentIdCount"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/comments_ids_background"
            android:gravity="center"
            android:padding="5dp"
            android:singleLine="true"
            android:text="30"
            android:textColor="#ffffff" />

        <ImageButton
            android:id="@+id/view_on_inat"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@id/commentIdCount"
            android:background="@drawable/actionbar_btn"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:singleLine="true"
            android:src="@drawable/ic_fa_share_square_o" />

        <ImageButton
            android:id="@+id/delete_observation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/view_on_inat"
            android:background="@drawable/actionbar_btn"
            android:padding="5dp"
            android:singleLine="true"
            android:src="@drawable/ic_action_discard" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_actionbar">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/errors"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Errors"
                android:background="#F3D4DB"
                android:textColor="#C8565F"
                android:padding="10dp"
                android:visibility="gone"
                />

            <org.lucasr.twowayview.TwoWayView
                android:id="@+id/gallery"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/TwoWayView"
                tools:context=".ObservationEditor"
                android:drawSelectorOnTop="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/taxonSelector"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_fa_search"
                    />
 
                <EditText
                    android:layout_toStartOf="@id/taxonSelector"
                    android:id="@+id/speciesGuess"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:hint="@string/species_guess_hint"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:inputType="text|textCapSentences" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>
            <EditText
                android:id="@+id/observed_on_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/observed_on"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="fill_vertical"
                    android:layout_marginStart="2dp"
                    android:layout_weight="0.5"
                    android:text="@string/set_date" />

                <Button
                    android:id="@+id/time_observed_at"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="0.5"
                    android:text="@string/set_time" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <TableLayout
                    android:id="@+id/locationAttributes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:orientation="vertical" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:paddingRight="5dp"
                            android:text="Lat"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/latitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/unknown" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="5dp"
                            android:text="Lon"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/longitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/unknown" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/acc"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/accuracy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/unknown" />
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:id="@+id/locationActions"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <ProgressBar
                        android:id="@+id/locationProgress"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="5dp"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:id="@+id/locationRefreshButton"
                        style="@style/ButtoniNatAppTheme"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_margin="0dp"
                        android:layout_marginBottom="0dp" >

                        <TextView
                            style="@android:style/TextAppearance.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:drawableStart="@drawable/ic_action_location_searching"
                            android:gravity="center"
                            android:text="@string/gps" />
                    </RelativeLayout>

                    <ImageButton
                        android:id="@+id/locationStopRefreshButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_action_remove"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <org.inaturalist.android.MultilineEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/brief_description"
                android:imeOptions="actionDone"
                android:inputType="text|textMultiLine|textCapSentences" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>

            <Button
                android:id="@+id/select_projects"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/select_projects" />

            <TableLayout
                android:id="@+id/projects"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:stretchColumns="*" >
            </TableLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp"
                android:stretchColumns="*" >

                <TableRow>

                    <TextView
                        style="@android:style/TextAppearance.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:text="@string/id_please" />

                    <org.jraf.android.backport.switchwidget.Switch
                        android:id="@+id/id_please"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginEnd="7dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        style="@android:style/TextAppearance.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:text="@string/geoprivacy" />

                    <Spinner
                        android:id="@+id/geoprivacy"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="7dp"
                        android:entries="@array/geoprivacy_items"
                        android:entryValues="@array/geoprivacy_values" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/project_fields"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*" >
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>