...
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="pull_to_sync">Pull to sync...</string>
    <string name="release_to_sync">Release to sync...</string>
    <string name="edit_observation">Edit Observation</string>
    <string name="discard_changes">Are you sure you want to discard unsaved changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="agree">Agree?</string>
    <string name="no_comments">No comments/identifications yet</string>
    <string name="posted_by">Posted by %1$s on %2$s</string>
...
    <string name="observation_photos">Observation Photos</string>
    <string name="must_login_to_add_comment">You must be logged in to add comments</string>
    <string name="must_login_to_add_id">You must be logged in to add identifications</string>

    <string name="map">Map</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>

    <string name="remove">Remove?</string>

    <string name="no_observations_found">No observations found</string>

    <string name="id_please_tag">ID Please</string>
...
