<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">
	
    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/observations_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"/>
        
    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="30dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        style="@android:style/TextAppearance.Medium"
        android:textColor="#000000"
        android:text="@string/no_observations_yet" />

    <TextView
        android:id="@+id/sync_observations"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        style="@android:style/TextAppearance.Medium"
        android:text="@string/sync_x_observations" />
</RelativeLayout>